# wulfenit

./: .gitignore  CITATION.CFF  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  server.js
adrs/: ADR-001.md  README.md
design/: wulfenit.feature
frontend/: package-lock.json  package.json  server.js
frontend/public/: index.html  script.js
src/recognition/: image-recognition-gpt.py  image-recognotion.py
tensorflo-js-approach/: .gitignore  README.md  package-lock.json  package.json
